# mbext

./: .gitignore  README.md  clean.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: fast_tests.yml  fast_tests_onnx_light.yml  fast_tests_ort_nightly.yml  llama_cpp_tests.yml  report_pr_files.yml  style.yml  trained_tiny_llm_tests.yml
modelbuilder/: __init__.py  builder.py  ext_test_case.py  genai_config_utils.py  rt_helper.py
modelbuilder/builders/: __init__.py  base.py  base_audio.py  base_embedding.py  base_vision.py  chatglm.py  deepseek.py  gemma.py  gptoss.py  granite.py  hunyuan.py  internlm.py  lfm2.py  local_functions.py  mistral.py  nemotron.py  olmo.py  phi.py  qwen.py  whisper.py
modelbuilder/helpers/: cache_helper.py  onnx_helper.py  rt_helper.py
tests/: conftest.py  test_olmo2.py  test_olmo3.py  test_smollm3.py  test_tiny_llm.py
tests/fast/: test_check_extra_options.py  test_combine_quarks.py  test_ext_test_case.py  test_fix_genai_config.py  test_llama_attention_discrepancies.py  test_onnx_generate.py  test_onnx_helper.py  test_random_chatglm.py  test_random_deepseek.py  test_random_ernie4_5.py  test_random_gemma.py  test_random_gemma2.py  test_random_gemma3.py  test_random_gemma3_conditional.py  test_random_gemma4.py  test_random_gpt_oss_20b.py  test_random_granite.py  test_random_hunyuan.py  test_random_internlm2.py  test_random_lfm2.py  test_random_ministral3.py  test_random_mistral_nemo.py  test_random_mixtral.py  test_random_nemotron.py  test_random_nemotron_h.py  test_random_olmo.py  test_random_olmo2.py  test_random_olmo3.py  test_random_phi.py  test_random_phi3.py  test_random_phi3_mini_longrope.py  test_random_phi3_small.py  (+16 more)
(+10 files in other folders)
