[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "modelbuilder"
version = "0.1.0"
description = "Writes LLM in ONNX format."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "ml_dtypes",
    "numpy>=2.1",
    "onnx>=1.14",
    "onnxscript",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "black",
    "huggingface_hub",
    "onnxruntime>=1.24",
    "onnxruntime-genai",
    "pandas",
    "pytest>=7",
    "py-cpuinfo",
    "pytest-cov",
    "pytest-subtests",
    "ruff",
    "tabulate",
    "transformers",
]

[tool.black]
line-length = 98
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 98

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "I001"]
